--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrap">
         <div class="box01">
-            <img src="img/img1.png" alt="오버워치 로고">
+            <img src="img/b01_2.png" alt="오버워치 로고">
         </div>
         <div class="box02">
             오버워치 2는 무료 플레이 가능한 슈팅 게임으로, <br>
@@ -23,7 +23,7 @@
             전장에 주문을 거세요!
         </div>
         <div class="box04">
-            <img src="img/img2.png" alt="지금 바로 보러가기">
+            <img src="img/02_logo.png" alt="지금 바로 보러가기">
         </div>
     </div>
     <video autoplay muted loop>
