--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             전장에 주문을 거세요!
         </div>
         <div class="box04">
-            <img src="img/click.png" alt="지금 바로 보러가기">
+            <a href="sub.html">
+                <img src="img/click.png" alt="지금 바로 보러가기">
         </div>
     </div>
     <video autoplay muted loop>
